# matgpr

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  README.md  __init__.py  analysis.py  decomposition.py  eda.py  environment.yml  gpr_gpytorch.py  gpr_sklearn.py  mkdocs.yml  pipeline.py  plot.py  pyproject.toml  requirements.txt  scaling.py  splitting.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  jekyll-gh-pages.yml
docs/: benchmark_summary.md  example_cards.md  fingerprinting_options.md  index.md  license_strategy.md  matgpr_log.md  matgpr_next_steps.md  matgpr_user_guide.md  multifidelity_design.md  multifidelity_gpr.md  multitask_gpr.md  physics_informed_gpr.md  pi_gpr_guarantees.md  pypi_readiness.md  quickstart.md  release_checklist.md  sparse_multitask_noise_design.md  sparse_multitask_walkthrough.md  versioning.md
docs/api/: bayesian_optimization.md  bo_benchmarking.md  candidate_generation.md  data.md  derivative_gpr.md  estimators.md  experiment_logging.md  featurizers.md  fingerprints.md  gpytorch_gpr.md  heteroscedastic_gpr.md  index.md  kernels.md  multi_objective.md  multifidelity_gpr.md  multitask_gpr.md  noise_models.md  physics_constraints.md  physics_equations.md  sparse_multitask_gpr.md  target_transforms.md  uncertainty.md  validation.md  visualization.md
examples/gas_transport/: gas_transport_gpr_modeling.ipynb  gas_transport_report.md
examples/hardness/: hardness_gpr_modeling.ipynb  hardness_single_task_report.md
examples/opv/: dataset.csv  dataset.pkl  dataset_card.md  model_card.md  opv_gpr_modeling.ipynb  physics_informed_gpr_report.md
examples/solvent_diffusivity/: dataset.pkl  dataset_card.md  model_card.md  solvent_diffusivity_gpr_modeling.ipynb  solvent_diffusivity_report.md
examples/spall_strength/: dataset.csv  spall_strength_gpr_modeling.ipynb  spall_strength_report.md
genmatics_gpr/: __init__.py  data_cleaning.py  data_splitting.py  gpytorch_gpr.py  io_utils.py  reporting.py  sklearn_gpr.py  visualization.py
matgpr/: __init__.py  bayesian_optimization.py  bo_benchmarking.py  candidate_generation.py  data_cleaning.py  data_splitting.py  derivative_gpr.py  estimators.py  experiment_logging.py  featurizers.py  fingerprint_cache.py  gpytorch_gpr.py  heteroscedastic_gpr.py  inorganic_fingerprints.py  io_utils.py  kernels.py  metrics.py  multi_objective.py  multifidelity_gpr.py  multitask_gpr.py  noise_models.py  optional_dependencies.py  organic_fingerprints.py  pca.py  physics_constraints.py  physics_equations.py  preprocessing.py  reporting.py  sklearn_gpr.py  sparse_multitask_gpr.py  structure_fingerprints.py  target_transforms.py  uncertainty.py  validation.py  visualization.py
scripts/: smoke_notebooks.py
tests/: test_bayesian_optimization.py  test_bo_benchmarking.py  test_candidate_generation.py  test_derivative_gpr.py  test_estimators.py  test_experiment_logging.py  test_featurizers.py  test_fingerprint_cache.py  test_gpytorch_gpr.py  test_heteroscedastic_gpr.py  test_inorganic_fingerprints.py  test_kernels.py  test_multi_objective.py  test_multifidelity_gpr.py  test_multitask_gpr.py  test_noise_models.py  test_optional_dependencies.py  test_organic_fingerprints.py  test_physics_constraints.py  test_physics_equations.py  test_public_api.py  test_reporting.py  test_sparse_multitask_gpr.py  test_structure_fingerprints.py  test_target_transforms.py  test_uncertainty.py  test_validation.py  test_visualization.py
