[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "matgpr"
version = "0.1.0"
description = "Gaussian Process Regression toolkit for materials informatics, including physics-informed mean functions."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "gpytorch",
    "joblib",
    "matplotlib",
    "numpy",
    "pandas",
    "pymatgen",
    "rdkit",
    "scikit-learn",
    "scipy",
    "torch",
]

[project.optional-dependencies]
bo = [
    "botorch",
]
dev = [
    "build",
    "ipykernel",
    "nbconvert",
    "nbformat",
    "pytest",
    "pytest-cov",
    "ruff",
    "twine",
]
examples = [
    "shap",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]
materials-extra = [
    "matminer",
    "mendeleev",
]
structures = [
    "ase",
    "dscribe",
]
molecular-extra = [
    "mordredcommunity",
]
jarvis = [
    "jarvis-tools",
]
deep = [
    "deepchem",
]
all-fingerprints = [
    "ase",
    "deepchem",
    "dscribe",
    "jarvis-tools",
    "matminer",
    "mendeleev",
    "mordredcommunity",
]

[tool.setuptools.packages.find]
include = ["matgpr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "examples",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
]
ignore = [
    "E402",
    "E501",
]
